--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,9 @@ nav {
 
 .site-nav .link {
   display: block;
+
+  position: relative;
+
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -131,6 +134,20 @@ nav {
 
 .site-nav .link.current {
   color: var(--accent-color);
+}
+
+.site-nav .link.current::after {
+  content: '';
+
+  position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+
+  background-color: var(--accent-color);
 }
 
 /* Contacts */
@@ -309,6 +326,8 @@ section.hero {
   letter-spacing: 0.03em;
 }
 
+/* Work */
+
 .section.work {
   padding-bottom: 94px;
 }
@@ -316,6 +335,35 @@ section.hero {
 .work.list {
   display: flex;
 }
+
+.work .item.one,
+.work .item.two,
+.work .item.three {
+  position: relative;
+}
+
+.work-text {
+  content: '';
+  display: flex;
+  position: absolute;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 70px;
+  bottom: 0px;
+
+  color: var(--main-white-color);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
 .work.list img {
   display: block;
   max-width: 100%;
@@ -686,20 +734,70 @@ section.hero {
 .list-title {
   margin-bottom: 4px;
 
-  color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
+  color: var(--title-text-color);
 }
 
 .list .name {
-  color: var(--primary-text-color);
-
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   text-decoration: none;
   letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  border-radius: 4px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: var(--main-white-color);
+}
+
+.btn-modal {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 490px;
+  top: 8px;
+  border-radius: 30px;
+
+  background-color: var(--main-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
