--- a/css/styles.css
+++ b/css/styles.css
@@ -84,10 +84,13 @@ nav {
   line-height: 1.19;
   text-decoration: none;
   letter-spacing: 0.03em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .web {
   color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-header:hover,
@@ -125,6 +128,8 @@ nav {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .link:hover,
@@ -174,6 +179,8 @@ nav {
   letter-spacing: 0.02em;
   text-decoration: none;
   align-items: center;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts .link:hover,
@@ -191,6 +198,8 @@ nav {
   padding-bottom: 0;
   margin-right: 10px;
   fill: currentColor;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-smartphone:hover,
@@ -240,6 +249,8 @@ section.hero {
   align-items: center;
   letter-spacing: 0.06em;
   padding: 10px 32px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.order:hover,
@@ -343,7 +354,6 @@ section.hero {
 }
 
 .work-text {
-  content: '';
   display: flex;
   position: absolute;
 
@@ -419,7 +429,11 @@ section.hero {
   align-items: center;
   justify-content: center;
 
+  background-color: var(--main-white-color);
   fill: var(--icon-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-instagram,
@@ -474,11 +488,15 @@ section.hero {
   display: flex;
   width: 170px;
   height: 92px;
+
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   fill: var(--icon-color);
+
   align-items: center;
   justify-content: center;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-client.one {
@@ -560,13 +578,15 @@ section.hero {
 }
 .address-mail,
 .address-tel {
-  color: var(--address-footer-color);
-
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  color: var(--address-footer-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-mail:hover,
@@ -602,9 +622,6 @@ section.hero {
 }
 
 .footer-network-login {
-  background: rgba(255, 255, 255, 0.1);
-  fill: var(--main-white-color);
-
   display: flex;
   width: 44px;
   height: 44px;
@@ -612,6 +629,11 @@ section.hero {
 
   align-items: center;
   justify-content: center;
+
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--main-white-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-network-login:hover,
@@ -676,6 +698,9 @@ section.hero {
 
 .menu-portfolio .button {
   padding: 6px 22px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-portfolio .button:hover,
@@ -708,8 +733,48 @@ section.hero {
 .works .link {
   display: block;
   text-decoration: none;
+  position: relative;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.works-overlate {
+  display: flex;
+  position: absolute;
+  overflow: hidden;
+
+  width: 100%;
+  height: 294px;
+  top: 0;
+  left: 0;
+
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-one:hover .works-overlate {
+  transform: translateY(0);
+  opacity: 1;
+}
+.works-description {
+  display: block;
+  width: 322px;
+  height: 168px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: var(--main-white-color);
+}
 .works.list .link:hover,
 .works.list .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
