--- a/css/styles.css
+++ b/css/styles.css
@@ -754,6 +754,7 @@ section.hero {
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
   pointer-events: none;
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -762,6 +763,7 @@ section.hero {
   transform: translateY(0);
   opacity: 1;
 }
+
 .works-description {
   display: block;
   width: 322px;
@@ -773,8 +775,16 @@ section.hero {
   line-height: 1.56;
   letter-spacing: 0.03em;
 
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
   color: var(--main-white-color);
 }
+
+.item-one:hover .works-description {
+  opacity: 1;
+}
+
 .works.list .link:hover,
 .works.list .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
