--- a/css/styles.css
+++ b/css/styles.css
@@ -733,41 +733,24 @@ section.hero {
 .works .link {
   display: block;
   text-decoration: none;
-  position: relative;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .works-overlate {
-  display: flex;
-  position: absolute;
+  position: relative;
   overflow: hidden;
-
-  width: 100%;
-  height: 294px;
-  top: 0;
-  left: 0;
-
-  align-items: center;
-  justify-content: center;
-
-  background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  pointer-events: none;
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.item-one:hover .works-overlate {
-  transform: translateY(0);
-  opacity: 1;
 }
 
 .works-description {
+  position: absolute;
   display: block;
-  width: 322px;
-  height: 168px;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
 
   font-style: normal;
   font-weight: 400;
@@ -775,20 +758,21 @@ section.hero {
   line-height: 1.56;
   letter-spacing: 0.03em;
 
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   color: var(--main-white-color);
-}
-
-.item-one:hover .works-description {
-  opacity: 1;
+  background-color: rgba(33, 150, 243, 0.9);
 }
 
 .works.list .link:hover,
 .works.list .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.item .link:hover .works-description {
+  transform: translateY(0);
 }
 
 .works.list img {
