--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,8 @@ nav {
   width: 100%;
   height: 4px;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
+  border-radius: 2px;
 
   background-color: var(--accent-color);
 }
@@ -380,7 +381,7 @@ section.hero {
   height: auto;
 }
 
-.work.list .item.item:not(:last-child) {
+.work.list .item:not(:last-child) {
   margin-right: 30px;
 }
 .container.work .section-title,
@@ -699,7 +700,8 @@ section.hero {
 .menu-portfolio .button {
   padding: 6px 22px;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -730,7 +732,7 @@ section.hero {
   margin-bottom: 30px;
 } */
 
-.works .link {
+.works .link-card {
   display: block;
   text-decoration: none;
 
@@ -758,20 +760,21 @@ section.hero {
   line-height: 1.56;
   letter-spacing: 0.03em;
 
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   color: var(--main-white-color);
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.works.list .link:hover,
-.works.list .link:focus {
+.works.list .link-card:hover,
+.works.list .link-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.item .link:hover .works-description {
+.item .link-card:hover .works-description,
+.item .link-card:focus .works-description {
   transform: translateY(0);
 }
 
